using secretHash @1.0.0
