# src/controllers/userControllers/register.controller.ts
@@ -1,5 +1,5 @@
 import { Body, Controller, Post, Query, Route, Tags } from "tsoa";
-import { RegisterReq} from "../../Models/register/user-register";
+import { LoginReq, RegisterReq } from "../../Models/register/user-register";
 import { RegisterService } from "../../services/userService/register-service";
 
 
@@ -8,44 +8,45 @@ import { RegisterService } from "../../services/userService/register-service";
 export class RegisterController extends Controller {
 
     private RegisterService = new RegisterService();
-    
+
 
     @Post()
     public async registerUser(
         @Body() body: RegisterReq
-    ): Promise<any> {
+    ): Promise<RegisterReq | null | undefined> {
         try {
+            if (!body) {
+                console.log("Data not having")
+            }
             const user = await this.RegisterService.Register(body)
             return user
+
         } catch (e) {
             console.log(e);
-            
+
         }
     }
-        @Post('/confirm')
+    @Post('/confirm')
     public async confirmCode(
         @Query() email: string,
         @Query() confirmationCode: string
-    ): Promise<any> {
+    ): Promise<RegisterReq | null | undefined> {
         try {
             const result = await this.RegisterService.ConfirmCode1(email, confirmationCode)
             return result;
         } catch (e) {
             console.error("Error in confirming code:", e);
-            // Handle the error appropriately (e.g., return a user-friendly message)
-            throw e; // Optionally, you can re-throw the error or return a custom error response
         }
     }
     @Post('/login')
     public async login(
-        @Body() body: { email: string, password: string }
-    ): Promise<any> {
+        @Body() body: LoginReq
+    ): Promise<RegisterReq | null | undefined> {
         try {
-            const result = await this.RegisterService.login(body.email, body.password);
+            const result = await this.RegisterService.login(body);
             return result;
         } catch (e) {
             console.error("Error in login:", e);
-            throw e;
         }
     }
 
